@@ -22,7 +22,7 @@ package net.sf.marineapi.nmea.parser;
 
 import net.sf.marineapi.nmea.sentence.RTESentence;
 import net.sf.marineapi.nmea.sentence.Sentence;
-import net.sf.marineapi.nmea.util.SentenceId;
+import net.sf.marineapi.nmea.sentence.SentenceId;
 
 /**
  * RTE sentence parser.
